# ibisibi

./: AUTHORS.md  Cargo.toml  LICENSE  README.md  build.sh  deploy.sh  ibisibi.service  install.sh
.cargo/: config
examples/: cycle.yaml  destination.yaml  list.yaml  robo.yaml
src/: args.rs  cycle.rs  destination.rs  devices.rs  flash.rs  list.rs  main.rs  parity.rs  plan.rs  range.rs  record.rs  run.rs  scan.rs  serial.rs  slot.rs  status.rs  telegram.rs
src/record/: builder.rs  checksum.rs  db.rs  error.rs  query.rs  res.rs
