[package]
name = "ibisibi"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.5"
serde_yaml = "0.8.20"
serialport = "4.0.1"
thiserror = "1.0.26"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.130"
features = [ "derive" ]
