[package]
name = "ibisibi"
version = "0.4.0"
edition = "2018"

[dependencies]
argh = "0.1.7"
ihex = "3.0.0"
lazy_static = "1.4.0"
serde_yaml = "0.8.23"
serialport = "4.0.1"
thiserror = "1.0.30"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.130"
features = [ "derive" ]
